--- a/package.json
+++ b/package.json
@@ -8,5 +8,14 @@
   "dependencies": {
     "express": "3.4.8",
     "mongoose": "~3.8.8"
+  },
+  "devDependencies": {
+    "del": "^0.1.3",
+    "gulp": "^3.8.7",
+    "gulp-concat": "^2.4.1",
+    "gulp-karma": "0.0.4",
+    "karma": "^0.12.23",
+    "karma-jasmine": "^0.2.2",
+    "karma-phantomjs-launcher": "^0.1.4"
   }
 }
