--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "express": "3.4.8",
+    "gulp-nodemon": "^1.0.4",
     "mongoose": "~3.8.8"
   },
   "devDependencies": {
